perf: carry gzip bytes in QR byte mode, drop Base64 (todo §6.1)
Replace the gzip->Base64->text-QR payload with raw gzip bytes in QR 8-bit
byte mode, framed as a binary record (magic + length-prefixed project/relPath
+ u32 chunkIdx/total + 8-byte hash + raw data). Encoder/decoder use ISO-8859-1
so bytes round-trip 1:1 with no ECI. Removes Base64's ~33% inflation with no
accuracy loss; chunkDataSize now counts gzip bytes.

- CodecSupport: gzip-only compress/decompress + streaming compressToFile/
  decompressToFile (Base64 removed)
- QrPayloadSupport: byte[] buildPayload / parsePayload binary framing
- QrImageWriter / QrDecodeSupport: 8-bit byte mode via ISO-8859-1
- QrDecodedChunk / FileChunks / DecodeService / FileEncodingPlan: byte[] chunks
- tests + dev docs updated; full suite + clean build + round-trip benchmark green

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>